# gl2d-sandbox

./: .prettierignore  README.md  index.html  package.json
cfpages/: build.sh
crates/gl2d/: Cargo.toml
crates/gl2d/src/: backend.rs  draw_list.rs  glyph.rs  io.rs  lib.rs  shape.rs
crates/gl2d/src/shaders/: default.frag  default.vert  text.frag  text.vert
data/: hashire_merosu.txt
src/: App.tsx
